src/cli/project/export/snapshots/pixi__cli__project__export__conda_environment__tests__test_export_conda_env_yaml.snap
---
source: src/cli/project/export/conda_environment.rs
expression: env_yaml.unwrap().to_yaml_string()
---
name: default
channels:
- conda-forge
dependencies:
- python >=3.12.5,<4
- conda-forge::ca-certificates ==2024.8.30
- pyyaml >=6.0.2,<7
- readline ==8.2 h9e318b2_1
- pip
- pip:
  - rich>=13.8.0, <14
