src/cli/project/export/snapshots/pixi__cli__project__export__conda_environment__tests__test_export_conda_env_yaml_pyproject_panic.snap
---
source: src/cli/project/export/conda_environment.rs
assertion_line: 367
expression: env_yaml.unwrap().to_yaml_string()
---
name: default
channels:
- conda-forge
dependencies:
- pytest *
- hatch ==1.12.0
- flask >=3.0.2,<3.1
- gunicorn >=21.2.0,<21.3
- python >=3.12
- pip
- pip:
  - -e .
