src/cli/project/export/snapshots/pixi__cli__project__export__conda_environment__tests__test_export_conda_env_yaml_with_pip_custom_registry.snap
---
source: src/cli/project/export/conda_environment.rs
assertion_line: 315
expression: env_yaml.unwrap().to_yaml_string()
---
name: alternative
channels:
- conda-forge
dependencies:
- python ==3.12
- pip
- pip:
  - --index-url https://pypi.tuna.tsinghua.edu.cn/simple/
  - flask==3.0.3
